hotfix for right side hero image. updates to sponsors.svg to ensure we don't get reference errors later down the road. added id to mlh logo to access it's visibility.

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -2,17 +2,11 @@
 // Global Styles
 // ============================================================================
 
-/* Mixins */
-@import './mixins';
-
-/* Fonts */
-@import './fonts';
-
 body {
   margin: 0;
   box-sizing: border-box;
   background-color: #ffffff;
-  max-width: 100%;
+  max-width: 100vw;
   overflow-x: hidden;
 }
 
@@ -26,6 +20,12 @@ body {
   right: 0;
   overflow-x: hidden;
 }
+
+/* Mixins */
+@import './mixins';
+
+/* Fonts */
+@import './fonts';
 
 /* Landing Styles */
 @import './components/landing/landing';
